--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -8,7 +8,7 @@
             <li class="nav-item {{ if eq .originPage `home` }} active {{ end }}">
             {{/*  active means this is the current page  */}}
             {{/*  using ` quotes around "home" because I'm already inside of a quote  */}}
-                <a class="nav-link" href="/index.html">Portfolio
+                <a class="nav-link" href="/index.html"><h2>Portfolio</h2>
                     {{ if eq .originPage `home` }} 
                         <span class="sr-only">(current)</span>
                     {{ end }}
@@ -17,7 +17,7 @@
                 {{/*  /index.html means the path is based on the root folder rather than based on the path relative to the folder in which this HTML file is  */}}
             </li>
             <li class="nav-item {{ if eq .originPage `aboutMe` }} active {{ end }}">
-                <a class="nav-link" href="/about-me/">About Me
+                <a class="nav-link" href="/about-me/"><h2>About Me</h2>
                     {{ if eq .originPage `aboutMe` }} 
                         <span class="sr-only">(current)</span>
                     {{ end }}
