Color Scheme Update

--- a/layouts/partials/card-layout.html
+++ b/layouts/partials/card-layout.html
@@ -10,7 +10,7 @@
         {{ $imgThumb := $img.Fill "711x400" }}
         {{/*  Resizes and crops the project image to 400 X 400 so that we get a perfect square which loads quickly  */}}
         <div class="col-4">
-             <div class="card h-100 border-0">
+             <div class="card h-100 border-0 bg-light">
                 <img src="{{ $imgThumb.RelPermalink }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <a href="{{ .RelPermalink }}" class="stretched-link">
@@ -31,7 +31,6 @@
             {{/*    */}}
             {{/*  <img src="{{ $img.RelPermalink }}" />  */}}
 
-            
         {{ end }}
         {{ $nextIdx := add $idx 1 }}
         {{ if modBool $nextIdx $numColumns }}
