--- a/layouts/section/about-me.html
+++ b/layouts/section/about-me.html
@@ -11,7 +11,7 @@
 
     {{ $img:= .Resources.GetMatch .Params.headshot }}
     <div class="container">
-        <div class="row">
+        <div class="row text-light">
             <div class="col-6">
                 <img class="img-fluid" src="{{ $img.RelPermalink }}" />
             </div>
@@ -20,11 +20,7 @@
                 <p>{{ .Content }}</p>
             </div>
         </div>
-
     </div>
-
-    
-    
 
     {{ partial "scripts.html" }}
 </body>
